sas-core/main/default/objects/AD_Role__mdt/AD_Role__mdt.object-meta.xml
<CustomObject>
    <description>Represents an active directory role used to set permissions in just in time configuration for created or updated user.</description>
    <label>AD Role</label>
    <pluralLabel>AD Roles</pluralLabel>
</CustomObject>