sas-core/main/default/objects/AD_Role__mdt/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <description>The id of the group in Azure AD. This is a UUID in the format xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx.</description>
    <inlineHelpText>The id of the group in Azure AD. This is a UUID in the format xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx.</inlineHelpText>
    <label>Group Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>