sas-core/main/default/objects/AD_Role__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The priority of the role when processing permissions. A higher prioritized role is processed before a lower prioritized role. In case of conflicting assignments, the higher priority permission takes precedence.</description>
    <inlineHelpText>The priority of the role when processing permissions. A higher prioritized role is processed before a lower prioritized role. In case of conflicting assignments, the higher priority permission takes precedence.</inlineHelpText>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>