sas-core/main/default/objects/AD_Role__mdt/fields/TestOnly__c.field-meta.xml
<CustomField>
    <fullName>TestOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this ad role should only be applied in test environments.</description>
    <label>Test Only</label>
    <type>Checkbox</type>
</CustomField>